--- a/inicio.html
+++ b/inicio.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SS Tech Solutions</title>
   <link rel="stylesheet" href="style.css">
-   <link rel="icon" type="image/png" href="Imag/favicon.png">
+   <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
   
@@ -13,6 +13,7 @@
     <div class="logo">SS Tech Solutions</div>
     <nav>
       <ul>
+        <li><a href="#inicio">Inicio</a></li>
         <li><a href="#sobre">Sobre Nós</a></li>
         <li><a href="#servicos">Serviços</a></li>
         <li><a href="#depoimentos">Depoimentos</a></li>
@@ -22,8 +23,8 @@
   </header>
 
   
-  <section class="hero">
-    <div class="hero-content">
+  <section id="inicio" class="inicio">
+    <div class="inicio-content">
       <h1>SS Tech Solutions</h1>
       <p>Transformando dados em decisões estratégicas para o seu negócio</p>
       <a href="#sobre" class="btn">Saiba Mais</a>
@@ -53,12 +54,14 @@
       <p><em>Conectamos pessoas, ideias e tecnologia para construir o futuro!</em></p>
     </div>
 
-
-    <div class="sobre-imagem">
-      <img src="Imag/1SERVIÇOS.jpg" alt="Equipe de tecnologia trabalhando em conjunto">
-    </div>
+<div class="sobre-imagem">
+  <img src="02pservicos.jpg" alt="Serviço 1">
+</div>
 
   </div>
+
+
+
 </section>
 
 
@@ -166,7 +169,7 @@
   
 
     <div class="contato-imagem">
-  <img src="Imag/CONTATO.jpg" alt="alt=">
+  <img src="3pcontatos.jpg" alt="Contato">
     </div>
 
 
